# bozo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tests.yml
src/bozo/: __init__.py  cli.py  storage.py  transaction.py
tests/: __init__.py  test_storage.py  test_transaction.py
